--- a/substreams-SPS/substreams-rust/Cargo.toml
+++ b/substreams-SPS/substreams-rust/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "pharma_supply_chain_substreams"
-version = "0.1.0"
-edition = "2018"
+name = "pharma_supply_chain_substreams"  # Package name
+version = "0.1.0"  # Package version
+edition = "2018"  # Rust edition
 
 [dependencies]
-substreams = "0.1.0"
-substreams-ethereum = "0.1.0"
+substreams = "0.1.0"  # Substreams dependency
+substreams-ethereum = "0.1.0"  # Substreams Ethereum dependency
