--- a/substreams-SPS/substreams.yaml
+++ b/substreams-SPS/substreams.yaml
@@ -1,36 +1,36 @@
-specVersion: 0.1.0
-description: Substreams configuration for pharmaceutical batch tracking
-repository: https://github.com/yourusername/pharma-supply-chain-tracker
+specVersion: 0.1.0 # Specifies the version of the Substreams specification
+description: Substreams configuration for pharmaceutical batch tracking # Describes the purpose of the Substreams configuration
+repository: https://github.com/yourusername/pharma-supply-chain-tracker # URL to the project's repository
 schema:
-  file: ./schema.graphql
+  file: ./schema.graphql # Path to the GraphQL schema file
 dataSources:
-  - kind: ethereum/contract
-    name: DrugBatch
-    network: rinkeby
+  - kind: ethereum/contract # Type of data source, in this case, an Ethereum contract
+    name: DrugBatch # Name of the contract
+    network: rinkeby # Ethereum network (Rinkeby testnet)
     source:
-      address: "0xYourContractAddress"
-      abi: DrugBatch
+      address: "0xYourContractAddress" # Address of the deployed smart contract
+      abi: DrugBatch # ABI of the contract
     modules:
-      - name: extractBatchCreated
-        description: Extracts BatchCreated events
-        kind: map
+      - name: extractBatchCreated # Name of the Substreams module
+        description: Extracts BatchCreated events # Description of the module's purpose
+        kind: map # Type of module, in this case, a map module
         inputs:
-          - source: "batchCreated"
+          - source: "batchCreated" # Input source, which is an event
         output:
-          type: BatchCreatedEvent
+          type: BatchCreatedEvent # Type of output produced by this module
 
-      - name: extractBatchUpdated
-        description: Extracts BatchUpdated events
-        kind: map
+      - name: extractBatchUpdated # Name of another Substreams module
+        description: Extracts BatchUpdated events # Description of the module's purpose
+        kind: map # Type of module
         inputs:
-          - source: "batchUpdated"
+          - source: "batchUpdated" # Input source, which is an event
         output:
-          type: BatchUpdatedEvent
+          type: BatchUpdatedEvent # Type of output produced by this module
 
-      - name: extractTemperatureExceeded
-        description: Extracts TemperatureExceeded events
-        kind: map
+      - name: extractTemperatureExceeded # Name of yet another Substreams module
+        description: Extracts TemperatureExceeded events # Description of the module's purpose
+        kind: map # Type of module
         inputs:
-          - source: "temperatureExceeded"
+          - source: "temperatureExceeded" # Input source, which is an event
         output:
-          type: TemperatureExceededEvent
+          type: TemperatureExceededEvent # Type of output produced by this module
