--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "hardhat": "^2.22.4"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "chai": "^5.1.1",
     "dotenv": "^16.4.5",
