--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "graphql": "^16.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "4.0.3"
   },
   "browserslist": {
