--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "backend",
+  "name": "pharma-supply-chain-tracking-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for pharmaceutical supply chain tracking using smart contracts and Chainlink",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.12.1",
-    "express": "^4.19.2"
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.4.0",
+    "express": "^4.17.1"
   }
 }
