--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "csv-parse": "^5.5.6",
+    "d3-request": "^1.0.6",
     "dotenv": "^10.0.0",
     "ethers": "^5.7.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security"
   }
 }
